[gd_scene load_steps=6 format=3 uid="uid://do3h5fcjdd107"]

[ext_resource type="Script" path="res://scenes/menu_scenes/register_window.gd" id="1_tdkm3"]
[ext_resource type="Texture2D" uid="uid://d18ldiatlfqdy" path="res://assets/menus/register_plank_0.png" id="2_85dr4"]
[ext_resource type="Texture2D" uid="uid://cl80jwt3021s2" path="res://assets/menus/login_plank_0.png" id="3_wslm4"]
[ext_resource type="Texture2D" uid="uid://dn85rkghsjd4t" path="res://assets/menus/menu_plank_3.png" id="4_nbww6"]
[ext_resource type="AudioStream" uid="uid://fkvn2yts26js" path="res://assets/menus/blood_splatter2.ogg" id="5_esr0y"]

[node name="register_window" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tdkm3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.5
offset_top = -135.5
offset_right = 257.5
offset_bottom = 135.5
grow_horizontal = 2
grow_vertical = 2

[node name="LoginField" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Login"

[node name="PasswordField" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Password"

[node name="RegisterButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("2_85dr4")
flat = true

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("3_wslm4")
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_nbww6")
flat = true
icon_alignment = 1

[node name="ButtonClickSplatter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_esr0y")
pitch_scale = 2.0
bus = &"UI"

[connection signal="focus_entered" from="VBoxContainer/RegisterButton" to="." method="_on_register_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/RegisterButton" to="." method="_on_register_button_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/RegisterButton" to="." method="_on_register_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/RegisterButton" to="." method="_on_register_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/RegisterButton" to="." method="_on_register_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/LoginButton" to="." method="_on_login_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/LoginButton" to="." method="_on_login_button_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/LoginButton" to="." method="_on_login_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/LoginButton" to="." method="_on_login_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
